--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </header>
     <!--Баннер-->
     <main>
-      <section class="section section-banner">
+      <section class="section section-banner overlay">
         <div class="container">
           <h1 class="section-banner__title">
             ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ
