--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </li>
             <li class="main-contact__item">
               <a href="tel:+380961111111" class="main-contact__link">
-                <svg class="icon smartphone" width="10" height="16">
+                <svg class="main-contact__link-icon" width="10" height="16">
                   <use href="./icons/icons.svg#icon-smartphone"></use></svg
                 >+380961111111</a
               >
@@ -62,7 +62,7 @@
     </header>
     <!--Баннер-->
     <main>
-      <section class="section section-banner overlay">
+      <section class="section-banner">
         <div class="container">
           <h1 class="section-banner__title">
             ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ
@@ -131,7 +131,7 @@
       <section class="section-about">
         <div class="container">
           <h2 class="section-title">Чим ми займаємося</h2>
-          <ul class="section-about__list link">
+          <ul class="section-about__list">
             <li class="item">
               <div class="about-container">
                 <img
