--- a/portfolio.html
+++ b/portfolio.html
@@ -8,10 +8,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"/>
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"/>
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
+    />
     <link rel="stylesheet" href="./css/main.min.css" />
     <title>WebStudio</title>
   </head>
@@ -28,7 +30,11 @@
               <a href="./index.html" class="main-nav__link">Студія</a>
             </li>
             <li class="main-nav__item">
-              <a href="./portfolio.html" class="main-nav__link main-nav__link--active">Портфоліо</a>
+              <a
+                href="./portfolio.html"
+                class="main-nav__link main-nav__link--active"
+                >Портфоліо</a
+              >
             </li>
             <li class="main-nav__item">
               <a href="#" class="main-nav__link">Контакти</a>
@@ -45,7 +51,7 @@
             </li>
             <li class="main-contact__item">
               <a href="tel:+380961111111" class="main-contact__link">
-                <svg class="icon smartphone" width="10" height="16">
+                <svg class="main-contact__link-icon" width="10" height="16">
                   <use href="./icons/icons.svg#icon-smartphone"></use></svg
                 >+380961111111</a
               >
@@ -79,11 +85,16 @@
             <li class="project__item">
               <div class="project__box">
                 <img
-                width="370"
-                height="294"
-                alt="Технокряк"
-                src="./images/1technoduck.jpg"/>
-                <p class="project__overlay">"Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу."</p>  
+                  width="370"
+                  height="294"
+                  alt="Технокряк"
+                  src="./images/1technoduck.jpg"
+                />
+                <p class="project__overlay">
+                  "Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу."
+                </p>
               </div>
               <div class="project__main">
                 <h3 class="project__title">Технокряк</h3>
@@ -92,26 +103,38 @@
             </li>
             <li class="project__item">
               <div class="project__box">
-              <img
-                width="370"
-                height="294"
-                alt="Постер"
-                src="./images/2poster.jpg"/>
-                <p class="project__overlay">"Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу."</p>  
+                <img
+                  width="370"
+                  height="294"
+                  alt="Постер"
+                  src="./images/2poster.jpg"
+                />
+                <p class="project__overlay">
+                  "Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу."
+                </p>
               </div>
               <div class="project__main">
-                <h3 class="project__title">Постер New Orlean vs Golden&nbsp;Star</h3>
+                <h3 class="project__title">
+                  Постер New Orlean vs Golden&nbsp;Star
+                </h3>
                 <p class="project__name">Дизайн</p>
               </div>
             </li>
             <li class="project__item">
               <div class="project__box">
-              <img
-                width="370"
-                height="294"
-                alt="Ресторан"
-                src="./images/3restaurant.jpg"/>
-                <p class="project__overlay">"Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу."</p>  
+                <img
+                  width="370"
+                  height="294"
+                  alt="Ресторан"
+                  src="./images/3restaurant.jpg"
+                />
+                <p class="project__overlay">
+                  "Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу."
+                </p>
               </div>
               <div class="project__main">
                 <h3 class="project__title">Ресторан Seafood</h3>
@@ -120,12 +143,17 @@
             </li>
             <li class="project__item">
               <div class="project__box">
-              <img
-                width="370"
-                height="294"
-                alt="Проєкт прайм"
-                src="./images/4headphones.jpg"/>
-                <p class="project__overlay">"Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу."</p>  
+                <img
+                  width="370"
+                  height="294"
+                  alt="Проєкт прайм"
+                  src="./images/4headphones.jpg"
+                />
+                <p class="project__overlay">
+                  "Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу."
+                </p>
               </div>
               <div class="project__main">
                 <h3 class="project__title">Проєкт Prime</h3>
@@ -134,12 +162,17 @@
             </li>
             <li class="project__item">
               <div class="project__box">
-              <img
-                width="370"
-                height="294"
-                alt="Проєкт бокс"
-                src="./images/5boxes.jpg"/>
-                <p class="project__overlay">"Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу."</p>  
+                <img
+                  width="370"
+                  height="294"
+                  alt="Проєкт бокс"
+                  src="./images/5boxes.jpg"
+                />
+                <p class="project__overlay">
+                  "Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу."
+                </p>
               </div>
               <div class="project__main">
                 <h3 class="project__title">Проєкт Boxes</h3>
@@ -148,12 +181,17 @@
             </li>
             <li class="project__item">
               <div class="project__box">
-              <img
-                width="370"
-                height="294"
-                alt="Монітор"
-                src="./images/6monitor.jpg"/>
-                <p class="project__overlay">"Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу."</p>  
+                <img
+                  width="370"
+                  height="294"
+                  alt="Монітор"
+                  src="./images/6monitor.jpg"
+                />
+                <p class="project__overlay">
+                  "Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу."
+                </p>
               </div>
               <div class="project__main">
                 <h3 class="project__title">Insoiration has no Borders</h3>
@@ -162,12 +200,17 @@
             </li>
             <li class="project__item">
               <div class="project__box">
-              <img
-                width="370"
-                height="294"
-                alt="Видання"
-                src="./images/7edition.jpg"/>
-                <p class="project__overlay">"Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу."</p>  
+                <img
+                  width="370"
+                  height="294"
+                  alt="Видання"
+                  src="./images/7edition.jpg"
+                />
+                <p class="project__overlay">
+                  "Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу."
+                </p>
               </div>
               <div class="project__main">
                 <h3 class="project__title">Видання Limited Edition</h3>
@@ -176,12 +219,17 @@
             </li>
             <li class="project__item">
               <div class="project__box">
-              <img
-                width="370"
-                height="294"
-                alt="Проєкт лаб"
-                src="./images/8projectlab.jpg"/>
-                <p class="project__overlay">"Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу."</p>  
+                <img
+                  width="370"
+                  height="294"
+                  alt="Проєкт лаб"
+                  src="./images/8projectlab.jpg"
+                />
+                <p class="project__overlay">
+                  "Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу."
+                </p>
               </div>
               <div class="project__main">
                 <h3 class="project__title">Проєкт LAB</h3>
@@ -190,12 +238,17 @@
             </li>
             <li class="project__item">
               <div class="project__box">
-              <img
-                width="370"
-                height="294"
-                alt="Ноутбук"
-                src="./images/9growing.jpg"/>
-                <p class="project__overlay">"Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу."</p>  
+                <img
+                  width="370"
+                  height="294"
+                  alt="Ноутбук"
+                  src="./images/9growing.jpg"
+                />
+                <p class="project__overlay">
+                  "Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу."
+                </p>
               </div>
               <div class="project__main">
                 <h3 class="project__title">Growing Business</h3>
